--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/public/css/dark-mode.css">
 		{{#if user}}
 		<script>
-			window.userTheme = {{#if user.theme}}"{{user.theme}}"{{else}}null{{/if}};
+			window.userTheme = {{#if user.theme}}"{{user.theme}}"{{else}}"light"{{/if}};
 		</script>
 		{{/if}}
 	</head>
